prevent highlighting legend when using shift+click

--- a/web/gui/dashboard.css
+++ b/web/gui/dashboard.css
@@ -337,6 +337,14 @@ body {
     /* -webkit-font-smoothing: none; */
 }
 
+.netdata-legend-value, .netdata-legend-name {
+  /* prevent highlight when shift-clicking */
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
 .netdata-legend-name.not-selected {
     font-weight: normal;
     opacity: 0.3;
